Added automated test for OpenSim muscle coloring (#663)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -918,6 +918,7 @@ add_executable(testosc EXCLUDE_FROM_ALL
 
     tests/Maths/TestBVH.cpp
 
+    tests/OpenSimBindings/Graphics/TestOpenSimDecorationGenerator.cpp
     tests/OpenSimBindings/TestForwardDynamicSimulation.cpp
     tests/OpenSimBindings/TestOpenSim.cpp
     tests/OpenSimBindings/TestOpenSimActions.cpp
