Added osc::Color class (#600)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -909,6 +909,7 @@ add_executable(testosc EXCLUDE_FROM_ALL
     tests/Formats/TestCSV.cpp
     tests/Formats/TestDAE.cpp
 
+    tests/Graphics/TestColor.cpp
     tests/Graphics/TestCubemap.cpp
     tests/Graphics/TestCubemapFace.cpp
     tests/Graphics/TestImage.cpp
