Implemented osc::RenderTextureReadWrite (#600)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -460,6 +460,7 @@ add_library(osccore STATIC
     src/Graphics/RenderTexture.hpp
     src/Graphics/RenderTextureDescriptor.hpp
     src/Graphics/RenderTextureFormat.hpp
+    src/Graphics/RenderTextureReadWrite.hpp
     src/Graphics/Rgb24.hpp
     src/Graphics/Rgba32.hpp
     src/Graphics/SceneCollision.hpp
