--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -578,6 +578,8 @@ add_library(osccore STATIC
     src/OpenSimBindings/Tabs/Experimental/TPS2DTab.hpp
     src/OpenSimBindings/Tabs/Experimental/TPS3DTab.cpp
     src/OpenSimBindings/Tabs/Experimental/TPS3DTab.hpp
+    src/OpenSimBindings/Tabs/Experimental/ExcitationEditorTab.cpp
+    src/OpenSimBindings/Tabs/Experimental/ExcitationEditorTab.hpp
     src/OpenSimBindings/Tabs/LoadingTab.cpp
     src/OpenSimBindings/Tabs/LoadingTab.hpp
     src/OpenSimBindings/Tabs/MeshImporterTab.cpp
