Changed default build_resources config file tab

--- a/build_resources/DEV_osc.toml.in
+++ b/build_resources/DEV_osc.toml.in
@@ -15,7 +15,7 @@ resources = "@CMAKE_CURRENT_SOURCE_DIR@/resources"
 docs = "@CMAKE_CURRENT_SOURCE_DIR@/docs/build"
 
 # handy for auto-opening an in-development tab
-# initial_tab = "OpenSim/PreviewExperimentalData"
+# initial_tab = "LearnOpenGL/Blending"
 
 [experimental_feature_flags]
 
