--- a/src/oscar/CMakeLists.txt
+++ b/src/oscar/CMakeLists.txt
@@ -1,9 +1,6 @@
 # prefer to choose GLVND for OpenGL
 cmake_policy(SET CMP0072 NEW)
 
-# define MSVC warning flags (e.g. /W3 /W4) ourselves
-cmake_policy(SET CMP0092 NEW)
-
 # find dependencies (usually built+installed from `third_party/`)
 find_package(OpenGL REQUIRED)
 find_package(glew REQUIRED CONFIG)
@@ -20,211 +17,10 @@ find_package(span-lite REQUIRED CONFIG)
 find_package(tomlplusplus REQUIRED CONFIG)
 find_package(unordered_dense REQUIRED CONFIG)
 
-# osc_configuration:
-#
-#     an INTERFACE target that sets common options that are used by the real
-#     targets (e.g. use C++17, use these flags, etc.)
-add_library(osc_configuration INTERFACE)
-
-# osc_configuration: set general compiler options used by all targets
-target_compile_options(osc_configuration INTERFACE
-
-    # msvc (Windows) flags
-    $<$<CXX_COMPILER_ID:MSVC>:
-
-        # treat all warnings as errors
-        /WX
-
-        # keep frame pointers around, so that runtime stack traces can be dumped to error logs
-        /Oy-
-
-        # disable MSVC's permissive mode to ensure better ISO C++ conformance
-        /permissive-
-
-        # ensure `volatile` variables follow (less-strict) ISO standards
-        /volatile:iso
-
-        # ensure preprocessor is standards conformant
-        /Zc:preprocessor
-
-        # assume `new` throws when memory cannot be allocated (ISO conformance)
-        /Zc:throwingNew
-
-        # only handle standard, synchronous, C++ exceptions (ISO) and treat asynchronous
-        # Windows/system structured exceptions as fatal, non-catchable, errors
-        /EHsc
-
-        # if requested, enable MSVC's libASAN
-        $<$<BOOL:${OSC_USE_ASAN}>:/fsanitize=address>
-    >
-
-    # gcc AND clang flags
-    $<$<OR:$<CXX_COMPILER_ID:GNU>,$<CXX_COMPILER_ID:Clang>>:
-
-        # treat all warnings as errors
-        -Werror
-
-        # enable all basic warnings
-        -Wall
-
-        # enable extra warnings
-        -Wextra
-
-        # enable pedantically extra warnings
-        -pedantic
-
-        # warn if using an uninitialized variable
-        -Wuninitialized
-
-        # warn if an uninitialized variable is initialized by itself
-        -Winit-self
-
-        # warn if a variable's name shadows an earlier (higher scope) variable with the same name
-        -Wshadow
-
-        # warn if data is casted to a higher alignment (e.g. char -> int64_t)
-        #
-        # todo: set to =strict
-        -Wcast-align
-
-        # disabled: broken in stb
-        # warn if casting C string constants from `char const*` to `char*`
-        # -Wwrite-strings
-
-        # warn if a dangling else is detected
-        -Wdangling-else
-
-        # warn if a date-time macro expansion is not reproducible
-        -Wdate-time
-
-        # warn if a variable-length array (VLA) is detected (disallowed)
-        -Wvla
-
-        # warn if the compiler detected that the code is way too complex to optimize
-        -Wdisabled-optimization
-
-        # warn if a structure is given the 'packed' attribute (disallowed: alignment)
-        -Wpacked
-
-        # disabled: broken in stb
-        # warn if a case in a switch statement implicitly falls through after a statement
-        # -Wimplicit-fallthrough
-
-        # disabled: requires newer gcc
-        # warn if calls to `strcmp` and `strncmp` are determined to be invalid at compile-time
-        # -Wstring-compare
-
-        # warn if insecure string formatting (e.g. for printf) is detected
-        -Wformat-security
-
-        # disabled: requires newer gcc
-        # warn if trying to allocate 0 bytes of memory using an allocation function (could be undef behavior)
-        # -Walloc-zero
-
-        # disabled: requires newer gcc
-        # warn if using trampoline functions (requires executable stack)
-        # -Wtrampolines
-
-        # disabled: broken in STB
-        # warn if a pointer is cast in a C-style cast in such a way that it removes qualifiers (e.g. char const* -> char*)
-        # -Wcast-qual
-
-        # disabled: broken in osc
-        # warn if an implicit conversion may alter a value
-        # -Wconversion
-
-        # disabled: requires newer gcc
-        # warn if a suspicous use of a logical operator is detected (e.g. i < 0 && i < 0)
-        # -Wlogical-op
-
-        # disabled: requires newer gcc
-        # warn if a float constant does not have the 'f' suffix
-        # -Wunsuffixed-float-constants
-
-        # todo: warn if using now-deprecated C/C++ constructs
-        # -Wtraditional
-
-        -Wno-multichar
-
-        # disable: broken by STB headers
-        -Wno-unused
-
-        # disable: broken by STB headers
-        -Wno-sign-compare
-
-        # disable: broken by STB headers
-        -Wno-missing-field-initializers
-
-        # disabled: requires newer gcc and broken by nativefiledialog
-        # -Wno-format-truncation
-
-        # disable: offsetof used in OSC's component/propertytree API
-        -Wno-invalid-offsetof
-
-        # disabled: doesn't work in some contexts where forward declarations are necessary
-        # -Wredundant-decls
-
-        # regardless of debug/release, pin the frame pointer register
-        # so that stack traces are sane when debugging (even in Release).
-        #
-        # This adds some overhead (pins one register and requires callers
-        # to setup their base pointers etc.) but makes debugging + profiling
-        # the application much easier, even in release mode
-        -fno-omit-frame-pointer
-
-        # if address sanitizer is specified, use it
-        $<$<BOOL:${OSC_USE_ASAN}>:-fsanitize=address>
-    >
-
-    # clang flags
-    $<$<CXX_COMPILER_ID:Clang>:
-        -Wno-cast-align
-
-        # required in earlier clangs. Just setting
-        # -fno-omit-frame-pointer (above) is not enough
-        #
-        # see:
-        #   - https://stackoverflow.com/questions/43864881/fno-omit-frame-pointer-equivalent-compiler-option-for-clang
-        #   - fixed here: https://reviews.llvm.org/D64294
-        -mno-omit-leaf-frame-pointer
-    >
-
-    # gcc flags
-    $<$<CXX_COMPILER_ID:GNU>:
-    >
-)
-
-# osc_configuration: set general compiler features used by all targets
-target_compile_features(osc_configuration INTERFACE cxx_std_17)
-
-# osc_configuration: set libraries used by all targets
-target_link_libraries(osc_configuration INTERFACE
-
-    # in earlier gcc/clang the <filesystem> implementation must be explicitly linked
-    $<$<OR:$<CXX_COMPILER_ID:GNU>,$<CXX_COMPILER_ID:Clang>>:stdc++fs>
-)
-
-# osc_configuration: handle OSC_FORCE_ASSERTS_ENABLED
-if(OSC_FORCE_ASSERTS_ENABLED)
-    target_compile_definitions(osc_configuration INTERFACE -DOSC_FORCE_ASSERTS_ENABLED=1)
-endif()
-
-
-# oscar_config.hpp:
-#
-#     configuration file that contains configuration-time vals (e.g. version, libs)
-configure_file(
-    "${CMAKE_CURRENT_SOURCE_DIR}/OscarStaticConfig.hpp.in"
-    "${CMAKE_CURRENT_BINARY_DIR}/generated/oscar/OscarStaticConfig.hpp"
-)
-
-#------------- configure core library target ------------- #
-
 # [lib]oscar:
 #
 #     core platform library for window creation, rendering, maths, etc.
 add_library(oscar STATIC
-    ${CMAKE_CURRENT_BINARY_DIR}/generated/oscar/OscarStaticConfig.hpp
 
     Bindings/GlmHelpers.cpp
     Bindings/GlmHelpers.hpp
@@ -515,21 +311,15 @@ target_compile_options(oscar PRIVATE
     $<$<CXX_COMPILER_ID:MSVC>: /W4>
 )
 
-# oscar: compile-time includes
 target_include_directories(oscar PUBLIC
-
-    # so that `#include "oscar/OscarStaticConfig.hpp"` works
-    ${CMAKE_CURRENT_BINARY_DIR}/generated/
 
     # so that `#include "oscar/HEADER.hpp"` works
     ${CMAKE_CURRENT_SOURCE_DIR}/..
 )
 
-# oscar: use all the stuff set by `osc_configuration`
 target_link_libraries(oscar PUBLIC
 
-    # so that it uses the standard flags etc.
-    osc_configuration
+    oscar_configuration
 
     OpenGL::GL
     GLEW::glew_s
@@ -547,7 +337,6 @@ target_link_libraries(oscar PUBLIC
     lunasvg::lunasvg
 )
 
-# oscar: link options
 target_link_options(oscar PUBLIC
 
     # MSVC (Windows)
@@ -555,22 +344,5 @@ target_link_options(oscar PUBLIC
 
         # ignore error from ImGui, which uses locally-defined symbols
         /ignore:4217
-    >
-
-    # Linux /w GCC or Clang
-    $<$<AND:$<BOOL:LINUX>,$<OR:$<CXX_COMPILER_ID:GNU>,$<CXX_COMPILER_ID:Clang>>>:
-
-        # make `ld` emit symbols for all functions - even if they aren't
-        # externally used (with an exe, only `main` is used, really)
-        #
-        # this makes the binary a little bigger (~400 KB) but means
-        # that the application can emit its own stack trace /w function
-        # names - even in Release mode.
-        -rdynamic
-    >
-
-    # GCC or Clang: handle OSC_USE_ASAN
-    $<$<OR:$<CXX_COMPILER_ID:GNU>,$<CXX_COMPILER_ID:Clang>>:
-        $<$<BOOL:${OSC_USE_ASAN}>:-fsanitize=address>
     >
 )
