Minor formatting change to CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -146,7 +146,7 @@ endif()
 add_subdirectory(src)
 add_subdirectory(apps)
 add_subdirectory(tests)
-if(OSC_BUILD_DOCS)
+if(${OSC_BUILD_DOCS})
     add_subdirectory(docs)
 endif()
 if(${OSC_BUILD_BENCHMARKS})
